cleaned up files to start project

--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
   </head>
 
   <body>
-    <div class="container">
-      <h1>hello!</h1>
-      <h2>hey</h2>
-      <a href="" class="btn btn-primary">click me</a>
-    </div>
+    <div class="container"></div>
     <script src="src/app.js"></script>
   </body>
 </html>
