--- a/index.html
+++ b/index.html
@@ -20,7 +20,31 @@
   </head>
 
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="weather-app">
+        <h1>New York, NY</h1>
+        <ul>
+          <li>Tuesday 13:09</li>
+          <li>Partly Cloudy</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">☀️ 12 ℃|℉</div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitations: %</li>
+              <li>Humidity: %</li>
+              <li>Wind: km/h</li>
+            </ul>
+          </div>
+        </div>
+        <small>
+          <a href="https://github.com/Eyetsko/Weather-Application.git"
+            >Open-source code</a
+          >
+          by Emily Yetsko
+        </small>
+      </div>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
