--- a/index.html
+++ b/index.html
@@ -21,22 +21,34 @@
 
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>New York, NY</h1>
-        <ul>
-          <li>Tuesday 13:09</li>
-          <li>Partly Cloudy</li>
-        </ul>
-        <div class="row">
-          <div class="col-6">☀️ 12 ℃|℉</div>
-          <div class="col-6">
-            <ul>
-              <li>Precipitations: %</li>
-              <li>Humidity: %</li>
-              <li>Wind: km/h</li>
-            </ul>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <h1>New York, NY</h1>
+          <ul>
+            <li>Tuesday 13:09</li>
+            <li>Partly Cloudy</li>
+          </ul>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix">
+                <img
+                  src="C:\Users\16072\OneDrive\Desktop\clouds.jpg"
+                  alt="clouds"
+                  class="float-left"
+                />
+                12 ℃ | ℉
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Precipitations: %</li>
+                <li>Humidity: %</li>
+                <li>Wind: km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
+
         <small>
           <a href="https://github.com/Eyetsko/Weather-Application.git"
             >Open-source code</a
@@ -45,6 +57,7 @@
         </small>
       </div>
     </div>
+
     <script src="src/app.js"></script>
   </body>
 </html>
