--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <h1>New York, NY</h1>
-          <ul>
-            <li>Tuesday 13:09</li>
-            <li>Partly Cloudy</li>
-          </ul>
+          <div class="general-location-info">
+            <h1>New York, NY</h1>
+            <ul>
+              <li>Tuesday 13:09</li>
+              <li>Partly Cloudy</li>
+            </ul>
+          </div>
           <div class="row">
             <div class="col-6">
               <div class="clearfix">
