updated html and CSS
styled temp section, added form/input

--- a/index.html
+++ b/index.html
@@ -24,23 +24,35 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="general-location-info">
+            <form action="text">
+              <input type="text" name="" id="" />
+              <input type="submit" name="search" id="" />
+            </form>
             <h1>New York, NY</h1>
             <ul>
               <li>Tuesday 13:09</li>
               <li>Partly Cloudy</li>
             </ul>
           </div>
+
           <div class="row">
+
             <div class="col-6">
-              <div class="clearfix">
+              <div class="clearfix weather-temp">
                 <img
                   src="C:\Users\16072\OneDrive\Desktop\clouds.jpg"
                   alt="clouds"
                   class="float-left"
                 />
-                12 ℃ | ℉
+                <span class="float-left temp">
+                  <strong>12</strong>
+                  <span class="units">℃ |<a href="#"> ℉</a> </span>
+              
+
               </div>
+
             </div>
+
             <div class="col-6">
               <ul>
                 <li>Precipitations: %</li>
