--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-      crossorigin="anonymous"
-    ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Vanilla-Weather-App</title>
@@ -24,14 +19,17 @@
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <div class="general-location-info">
-            <form action="text">
-              <input type="text" name="" id="" />
-              <input type="submit" name="search" id="" />
+         
+
+            <form id="search">
+              <input type="search" placeholder="search for a city" id="search"/>
+              <input type="submit" value="Search" class="btn btn-primary" id="search-button"/>
+              <button class="btn btn-primary">Current</button>
             </form>
-            <h1>New York, NY</h1>
+             <div class="general-location-info">
+            <h1 id="city-name">New York, NY</h1>
             <ul>
-              <li>Tuesday 13:09</li>
+              <li id="dateTime">Tuesday 13:09</li>
               <li>Partly Cloudy</li>
             </ul>
           </div>
