--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
          
 
             <form id="search">
-              <input type="search" placeholder="search for a city" id="search"/>
+              <input type="search" placeholder="search for a city..." id="city-input" autocomplete="off">
               <input type="submit" value="Search" class="btn btn-primary" id="search-button"/>
               <button class="btn btn-primary">Current</button>
             </form>
              <div class="general-location-info">
             <h1 id="city"></h1>
                   <ul>
-              <li id="dateTime">Tuesday 13:09</li>
+              <li>Last Updated:<span id="date-time">h</span></li>
               <li><span class="description" id="description"></span></li>
             </ul>
           </div>
