--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
                 />
                 <span class="float-left temp">
                   <strong id="temp"></strong>
-                  <span class="units">℃ |<a href="#"> ℉</a> </span>
-              
+                  <span class="units"><a href="#" id="celsius" class="active">℃ </a> 
+                      |
+                    <a href="#" id="farenheit"> ℉</a> </span>
+      
 
               </div>
 
