--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
          
 
             <form id="search">
-              <input type="search" placeholder="search for a city..." id="city-input" autocomplete="off">
+              <div class="row">
+                <div class="col-7 searchBar">
+              <input type="search" class="form-control rounded" placeholder="search for a city..." id="city-input" autocomplete="off">
+              </div>
+              <div class="col-2">
               <input type="submit" value="Search" class="btn btn-primary" id="search-button"/>
-              <button class="btn btn-primary">Current</button>
+              </div>
+              <div class="col-2">
+              <button class="btn btn-success">Current</button>
+              </div>
+              </div>
             </form>
              <div class="general-location-info">
             <h1 id="city"></h1>
