--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>Vanilla-Weather-App</title>
+    <title>Emily's-Weather-App</title>
   </head>
 
   <body>
@@ -30,7 +30,7 @@
               <input type="submit" value="Search" class="btn btn-primary" id="search-button"/>
               </div>
               <div class="col-2">
-              <button class="btn btn-success">Current</button>
+              <button class="btn btn-success" id="current-button">Current</button>
               </div>
               </div>
             </form>
