--- a/index.html
+++ b/index.html
@@ -70,6 +70,91 @@
               </ul>
             </div>
           </div>
+          <div class="weather-forecast">
+            <div class="row" id="days">
+              <div class="col-2">
+                Thurs
+              </div>
+<div class="col-2">
+                Fri
+              </div>
+              <div class="col-2">
+                Sat
+              </div>
+              <div class="col-2">
+                Sun
+              </div>
+              <div class="col-2">
+                Mon
+              </div>
+              <div class="col-2">
+                Tues
+              </div>
+            </div>
+            <div class="row" id="forecast-icons">
+              <div class="col-2">
+                <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                 width="36px"
+                />
+              </div>
+<div class="col-2">
+                  <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                 width="36px"
+                />
+              </div>
+              <div class="col-2">
+                  <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                 width="36px"
+                />
+              </div>
+              <div class="col-2">
+                  <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                 width="36px"
+                />
+              </div>
+              <div class="col-2">
+                  <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                 width="36px"
+                />
+              </div>
+              <div class="col-2">
+                  <img
+                  src="http://openweathermap.org/img/wn/10d@2x.png"
+                  alt=""
+                 width="36px"
+                />
+              </div>
+            </div>
+            <div class="row" id="future-weather">
+              <div class="col-2">
+                <span>30°</span> <span>22°</span> 
+              </div>
+<div class="col-2">
+                <span>30°</span> <span>22°</span> 
+              </div>
+              <div class="col-2">
+                <span>30°</span> <span>22°</span> 
+              </div>
+              <div class="col-2">
+<span>30°</span> <span>22°</span>          </div>
+              <div class="col-2">
+                <span>30°</span> <span>22°</span> 
+              </div>
+              <div class="col-2">
+                <span>30°</span> <span>22°</span> 
+              </div>
+            </div>
+          </div>
         </div>
 
         <small>
